--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -110,10 +110,34 @@
     border-color: #94ffadc3;
 }
 
+.card.signin-card {
+        /* background-color: lch(0% 0 0); */
+
+    background-color: lch(98.38% 9.58 150.89);
+    border-color: #94ffadc3;
+}
+
 .card.login-card form label {
     color: #3dc15b;
     font-size: 16px;
 }
+
+.card.signin-card h5 {
+    font-size: 16px !important;
+    color: #3dc15b;
+}
+
+
+.card.signin-card form label {
+    color: #3dc15b;
+    font-size: 14px;
+}
+
+.card.signin-card form input {
+    font-size: 14px !important;
+    padding-left: 2.0rem !important; /* Adjust as needed */
+}
+
 
 .theme-light form input:focus {
     border-color: #2f686a !important;
@@ -125,5 +149,10 @@
 .theme-light .input-icon  {
     color: #3dc15b;
 }
+
+
+hover-blue:hover {
+        color: blue !important;
+    }
 
 
