--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -269,3 +269,15 @@ hover-blue:hover {
 .converting-overlay.show {
     display: flex;
 }
+
+.pill {
+    width: 80px;
+    height: 8px;
+    background-color: #b3b3b3;
+    border-radius: 50px;
+    transition: background-color 0.3s ease;
+}
+
+.pill.active {
+    background-color: #2f686a;
+}
