--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -1201,6 +1201,35 @@ hover-blue:hover {
     border-bottom-right-radius: 0; /* No radius on the right side */
 }
 
+.subcategory-card-image {
+    overflow: hidden;
+}
+
+.subcategory-card-image img {
+    width: 70px;
+    height: 80px; /* Match the card height */
+    object-fit: cover; /* Ensures image covers the area properly */
+    object-position: center; /* Centers the image */
+    border-top-left-radius: 0.5rem; /* Match the card's border radius */
+    border-bottom-left-radius: 0.5rem; /* Match the card's border radius */
+    border-top-right-radius: 0; /* No radius on the right side */
+    border-bottom-right-radius: 0; /* No radius on the right side */
+}
+
+.subcategory-card-image-lg {
+    overflow: hidden;
+}
+
+.subcategory-card-image-lg img {
+    width: 100px;
+    height: 120px; /* Match the card height */
+    object-fit: cover; /* Ensures image covers the area properly */
+    object-position: center; /* Centers the image */
+    border-top-left-radius: 0.5rem; /* Match the card's border radius */
+    border-bottom-left-radius: 0.5rem; /* Match the card's border radius */
+    border-top-right-radius: 0; /* No radius on the right side */
+    border-bottom-right-radius: 0; /* No radius on the right side */
+}
 
 /* 
 .product-quantity-controls {
