--- a/public/styles/custom.css
+++ b/public/styles/custom.css
@@ -308,11 +308,11 @@ hover-blue:hover {
     background-color: #4ECDC4;
 }
 
-/* .password-toggle {
+.password-toggle {
     color: #6c757d;
     padding: 0.375rem 0.75rem;
     font-size: 0.875rem;
-} */
+}
 
 .password-toggle:hover {
     color: #4ECDC4;
