--- a/public/styles/highlights/highlight_mint.css
+++ b/public/styles/highlights/highlight_mint.css
@@ -1,1 +1,66 @@
-.color-highlight{color:#37BC9B !important}.bg-highlight{background-color:#37BC9B !important;color:#fff !important}.border-highlight{border-color:#37BC9B !important}.gradient-highlight{background-image:linear-gradient(to bottom, #48CFAD, #37BC9B) !important}.bg-fade-highlight-light{background-color:rgba(72,207,173,0.3) !important;color:#fff !important}.bg-fade-highlight-dark{background-color:rgba(55,188,155,0.7) !important;color:#fff !important}.footer-bar-2 .active-nav,.footer-bar-5 strong,.footer-bar-4 strong,.splide__pagination__page.is-active{background-color:#37BC9B !important}.footer-bar-1 .active-nav i,.footer-bar-1 .active-nav span,.footer-bar-3 .active-nav i{color:#37BC9B !important}.form-floating-over>.form-control:focus ~ label{color:#37BC9B}.form-floating-over>.form-control:not(:placeholder-shown) ~ label{color:#37BC9B}.form-floating-over>.form-select ~ label{color:#37BC9B}.color-highlight{color:#37BC9B}.bg-highlight{background-color:#37BC9B;color:#fff !important}
+/* Generating Color Pack*/
+.color-highlight {
+    color: #37bc9b !important;
+}
+
+.bg-highlight {
+    background-color: #37bc9b !important;
+    color: #fff !important;
+}
+
+.border-highlight {
+    border-color: #37bc9b !important;
+}
+
+.gradient-highlight {
+    background-image: linear-gradient(to bottom, #48cfad, #37bc9b) !important;
+}
+
+.footer-bar-2 .active-nav,
+.footer-bar-5 strong,
+.footer-bar-4 strong,
+.splide__pagination__page.is-active {
+    background-color: #37bc9b !important;
+}
+
+.footer-bar-1 .active-nav i,
+.footer-bar-1 .active-nav span,
+.footer-bar-3 .active-nav i {
+    color: #37bc9b !important;
+}
+
+.bg-fade-highlight-light {
+    background-color: rgba(72, 207, 173, 0.3) !important;
+    color: #fff !important;
+}
+
+.bg-fade-highlight-dark {
+    background-color: rgba(55, 188, 155, 0.7) !important;
+    color: #fff !important;
+}
+
+.footer-bar-6 .circle-nav strong,
+.footer-bar-6 .active-nav em {
+    background-image: linear-gradient(to bottom, #48cfad, #37bc9b) !important;
+}
+
+.form-floating-over > .form-control:focus ~ label {
+    color: #37bc9b;
+}
+
+.form-floating-over > .form-control:not(:placeholder-shown) ~ label {
+    color: #37bc9b;
+}
+
+.form-floating-over > .form-select ~ label {
+    color: #37bc9b;
+}
+
+.color-highlight {
+    color: #37bc9b;
+}
+
+.bg-highlight {
+    background-color: #37bc9b;
+    color: #fff !important;
+}
