--- a/public/styles/highlights/highlight_teal.css
+++ b/public/styles/highlights/highlight_teal.css
@@ -1,55 +1,66 @@
 /* Generating Color Pack*/
 .color-highlight {
-  color: #7DB1B1 !important;
+    color: #7db1b1 !important;
 }
 
 .bg-highlight {
-  background-color: #7DB1B1 !important;
-  color: #FFF !important;
+    background-color: #7db1b1 !important;
+    color: #fff !important;
 }
 
 .border-highlight {
-  border-color: #7DB1B1 !important;
+    border-color: #7db1b1 !important;
 }
 
 .gradient-highlight {
-  background-image: linear-gradient(to bottom, #A0CECB, #7DB1B1) !important;
+    background-image: linear-gradient(to bottom, #a0cecb, #7db1b1) !important;
 }
 
 .footer-bar-2 .active-nav,
 .footer-bar-5 strong,
 .footer-bar-4 strong,
 .splide__pagination__page.is-active {
-  background-color: #7DB1B1 !important;
+    background-color: #7db1b1 !important;
 }
 
 .footer-bar-1 .active-nav i,
 .footer-bar-1 .active-nav span,
 .footer-bar-3 .active-nav i {
-  color: #7DB1B1 !important;
+    color: #7db1b1 !important;
 }
 
-.footer-bar-6 .circle-nav strong, .footer-bar-6 .active-nav em {
-  background-image: linear-gradient(to bottom, #A0CECB, #7DB1B1) !important;
+.bg-fade-highlight-light {
+    background-color: rgba(160, 206, 203, 0.3) !important;
+    color: #fff !important;
+}
+
+.bg-fade-highlight-dark {
+    background-color: rgba(125, 177, 177, 0.7) !important;
+    color: #fff !important;
+}
+
+.footer-bar-6 .circle-nav strong,
+.footer-bar-6 .active-nav em {
+    background-image: linear-gradient(to bottom, #a0cecb, #7db1b1) !important;
 }
 
 .form-floating-over > .form-control:focus ~ label {
-  color: #7DB1B1;
+    color: #7db1b1;
 }
 
 .form-floating-over > .form-control:not(:placeholder-shown) ~ label {
-  color: #7DB1B1;
+    color: #7db1b1;
 }
 
 .form-floating-over > .form-select ~ label {
-  color: #7DB1B1;
+    color: #7db1b1;
 }
 
 .color-highlight {
-  color: #7DB1B1;
+    color: #7db1b1;
 }
 
 .bg-highlight {
-  background-color: #7DB1B1;
-  color: #FFF !important;
+    background-color: #7db1b1;
+    color: #fff !important;
 }
